--- a/extensions.conf
+++ b/extensions.conf
@@ -2,22 +2,22 @@
 writeprotect=no
 
 [default]
-exten => microsoftteams,1,NoOP() ; for options with chan_sip
+;This need for options from MSTEMAS with chan_sip
+exten => microsoftteams,1,NoOP() 
 
 [msteams]
-exten => msteams_trunk_from_teams,1,NoOP() ; for options with res_pjsip
+;This need for options from MSTEMAS with res_pjsip
+exten => msteams_trunk_from_teams,1,NoOP() 
 
 ;call from MSteams to SIP
-exten => _+X.,1,NoOp(ANI: ${EXTEN})
-    same => n,Dial(PJSIP/abonent,,Tt) ; call to abonent with pjsip
-    same => n,Dial(SIP/abonent,,Tt) ; call to abonent with sip
+exten => _+X.,1,NoOp(This Call from MSTEAMS)
+    same => n,hangup() 
 
 
 [incoming]
-
 ;call from SIP to msteams
 exten => _X.,1,NoOp(Incoming call to ${EXTEN} )
-same => n,Dial(PJSIP/msteams_trunk_from_teams/sip:+${EXTEN}@sip.pstnhub.microsoft.com:5061)  ;to msteams with pjsip
+same => n,Dial(PJSIP/msteams_trunk_from_teams/sip:+${EXTEN}@sip.pstnhub.microsoft.com:5061)  ;Then use pjsip need use that cinstruct for call to msteams
 same => n,Dial(SIP/MSTeams/+${EXTEN},,tT) ;to msteams with sip
 same => n,Hangup()
 
