--- a/sip.conf
+++ b/sip.conf
@@ -1,21 +1,16 @@
 [general]
 
 srvlookup=yes
-realm=<YOUR_DOMAIN>:5067 ;be sure to specify the port!!!!!
 tlsenable=yes
+realm=<YOUR_DOMAIN>:5067 ;be sure to specify the port!!!!!
 tlsbindaddr=<YOUR_IP>:5067
-
 tlsprivatekey=/etc/asterisk/ssl/privkey.crt
 tlscertfile=/etc/asterisk/ssl/cert.crt
 tlscafile=/etc/asterisk/ssl/ca.crt
-
 callerid=microsoftteams
 tlscipher=ALL
 tlsclientmethod=tlsv1
 tlsdontverifyserver=yes
-
-udpbindaddr=<YOUR_IP>:5067            ; IP address to bind UDP listen socket to (0.0.0.0 binds to all)
-transport=udp                   ; Set the default transports.  The order determines the primary default transport.
 
 
 [MSTeams]
@@ -31,23 +26,6 @@ dtmfmode=rfc2833
 context=msteams
 insecure=port,invite
 nat=force_rport,comedia
-fromdomain=<YOUR_IP>:5067 ;;be sure to specify the port
+fromdomain=<YOUR_DOMAIN>:5067 ;;be sure to specify the port
 encryption=yes
 
-
-[abonent]
-defaultuser=abonent
-secret=sEcrEt**
-callerid=Test <+61491570156>
-type=friend
-call-limit=2
-allowtransfer=yes
-insecure=port,invite
-qualify=yes
-canreinvite=no
-nat=force_rport,comedia
-host=dynamic
-dtmfmode=info
-context=incoming
-disallow=all
-allow = all
