--- a/pjsip.conf
+++ b/pjsip.conf
@@ -1,12 +1,3 @@
-;===============TRANSPORTS
-[simpletrans]
-type=transport
-protocol=udp
-bind=<YOUR_IP>:5067
-;local_net=10.0.0.0/8,192.168.0.0/16
-external_media_address = <YOUR_IP>
-external_signaling_address = <YOUR_IP>
-
 [transporttls]
 type=transport
 protocol=tls
@@ -33,16 +24,13 @@ media_encryption=sdes
 from_domain=<YOUR_DOMAIN>
 send_pai=no
 direct_media=no
-;rewrite_contact=no
-;force_rport=no
-sdp_owner=-    ; String placed as the username portion of an SDP origin o line                ; (default: "-")
-sdp_session=FullysPBX   ; String used for the SDP session s line (default:                         ; "Asterisk")
-allow_transfer=yes ;testing if it helps teams
+sdp_owner=-
+sdp_session=FullysPBX
+allow_transfer=yes
 
 force_rport=yes
 ice_support=yes
 rewrite_contact=yes
-  
 
 [aor_msteams_trunk_from_teams]
 type = aor
@@ -54,27 +42,3 @@ type=identify
 endpoint=msteams_trunk_from_teams
 match=sip-all.pstnhub.microsoft.com
 
-
-
-; SIP abonent
-[abonent]
-type=endpoint
-callerid=Test <+61491570156>
-context=incoming
-disallow=all
-direct_media=no
-allow=ulaw
-transport=simpletrans
-auth=abonent
-aors=abonent
-
-[abonent]
-type=auth
-auth_type=userpass
-password=sEcrEt**
-username=abonent
-
-[abonent]
-type=aor
-max_contacts=10
-remove_existing=yes
